--- a/Android_Interview_Prep_App/app/build.gradle
+++ b/Android_Interview_Prep_App/app/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    //Retrofit & Scalar Converter
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 }
 repositories {
     mavenCentral()
