--- a/Android_Interview_Prep_App/app/build.gradle
+++ b/Android_Interview_Prep_App/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 //    id 'androidx.navigation.safeargs.kotlin'
 }
 
@@ -30,6 +31,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/com.android.tools/proguard/coroutines.pro'
+    }
 }
 
 dependencies {
@@ -37,22 +41,26 @@ dependencies {
 //    implementation 'com.android.support:support-v4:25.3.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
     //Retrofit & Scalar Converter
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 
-    //Moshi
-    implementation "com.squareup.moshi:moshi:1.9.3"
-    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
-    //Retrofit with Moshi converter
-    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     //GSON
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+
+    //Retrofit with Moshi converter
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 }
 repositories {
     mavenCentral()
