--- a/Android_Interview_Prep_App/app/build.gradle
+++ b/Android_Interview_Prep_App/app/build.gradle
@@ -23,7 +23,7 @@ android {
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
