--- a/Interview_Prep__App/native_java/src/main/AndroidManifest.xml
+++ b/Interview_Prep__App/native_java/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.dreams.androidquizapp.MainActivity"
+        <activity android:name="com.dreams.androidquizapp.ui.main.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.nudennie.interviewprepapp.ScoreActivity"
+        <activity android:name="com.dreams.androidquizapp.ui.score.ScoreActivity"
                   android:screenOrientation="portrait"
             >
         </activity>
