--- a/Interview_Prep_App/settings.gradle
+++ b/Interview_Prep_App/settings.gradle
@@ -20,3 +20,4 @@ include ':native_kotlin:template'
 include ':native_java:template'
 include ':native_kotlin:retrofit'
 include ':native_java:retrofit'
+include ':sharedresources'
