--- a/Interview_Prep_App/native_java/retrofit/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/AndroidManifest.xml
@@ -6,23 +6,18 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.dreams.interviewprepapp.ui.main.MainActivity"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.dreams.interviewprepapp.ui.score.ScoreActivity"
-                  android:screenOrientation="portrait"
-            >
-        </activity>
+        <activity android:name="com.dreams.interviewprepapp.ui.score.ScoreActivity"/>
     </application>
 
 </manifest>
