--- a/Interview_Prep_App/native_kotlin/retrofit/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_kotlin/retrofit/src/main/AndroidManifest.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.interviewprep.kotlinretrofit">
+    package="com.interviewprep.kotlinretrofit">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"
+        <activity android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,10 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ScoreActivity"
-                  android:screenOrientation="portrait"
-            >
-        </activity>
+
+        <activity android:name=".ui.score.ScoreActivity"/>
     </application>
 
 </manifest>
