--- a/Interview_Prep_App/native_kotlin/retrofit/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_kotlin/retrofit/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.dreams.interviewprepapp">
+    package="com.interviewprep.kotlinretrofit">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -9,7 +9,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name="com.dreams.interviewprepapp.ui.main.MainActivity"
+        <activity android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.dreams.interviewprepapp.ui.score.ScoreActivity"/>
+
+        <activity android:name=".ui.score.ScoreActivity"/>
     </application>
 
 </manifest>
