--- a/Interview_Prep_App/settings.gradle
+++ b/Interview_Prep_App/settings.gradle
@@ -29,3 +29,4 @@ include ':native_kotlin:retrofit'
 include ':native_java:retrofit'
 include ':sharedresources'
 include ':native_kotlin:template'
+include ':native_java:javatemplate'
