Added 3 questions to Languages -> Android -> questions (#69)
* added questions

* added 3 questions

* added relevant information

* added relevant information

* added relevant information

* added relevant information

* changed questions (+6 squashed commits)
Squashed commits:
[85f60d9] Update auto-assign-issue.yml
[8fe58d4] Update auto-assign-issue.yml
[1e93c74] Update auto-assign-issue.yml
[b3b048a] Update auto-assign-issue.yml
[1699395] Update auto-assign-issue.yml
[cd2e211] Update auto-assign-issue.yml

--- a/.github/workflows/auto-assign-issue.yml
+++ b/.github/workflows/auto-assign-issue.yml
@@ -1,7 +1,7 @@
 name: Auto Assign Issue
 on:
   issue_comment:
-    types: [created]
+    types: [created, edited]
 
 jobs:
   auto_track:
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Cache Node Modules
         id: cache-node-modules
@@ -24,8 +22,8 @@ jobs:
 
       - name: Yarn
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-          run: |
-            yarn
+        run: |
+          yarn
 
       - name: Issue data
         run: |
@@ -40,4 +38,3 @@ jobs:
           USERNAME: ${{ github.event.comment.user.login }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           AUTO_ASSIGN_ISSUE: true
-          TOKEN: ${{ secrets.PAT }}
