--- a/.github/workflows/auto-assign-issue.yml
+++ b/.github/workflows/auto-assign-issue.yml
@@ -1,31 +1,15 @@
 name: Auto Assign Issue
 on:
   workflow_dispatch:
-  issue_comment:
-    types: [created, edited]
+  issues:
 
 jobs:
-  auto_track:
-    if: startsWith(github.event.comment.body, '!assign')
+#  auto_track:
+#    if: startsWith(github.event.comment.body, '!assign')
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.4.2
-
-      - name: Cache Node Modules
-        id: cache-node-modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('yarn.lock') }}
-
-      - name: Yarn
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: |
-          yarn
-
       - name: Issue data
         run: |
           echo "USERNAME: ${{ github.event.comment.user.login }}"
@@ -33,9 +17,18 @@ jobs:
           echo "Issue title: ${{ github.event.issue.title }}"
           echo "Issue body: ${{ github.event.issue.body }}"
 
-      - name: Assign Issue
-        uses: ./action/
-        with:
-          USERNAME: ${{ github.event.comment.user.login }}
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
-          AUTO_ASSIGN_ISSUE: true
+        - uses: wow-actions/auto-comment@v1
+          with:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            issuesAssignedReactions: 'hooray, +1'
+            issuesAssignedComment: |
+              👋 @{{ author }}
+              You've been assigned this issue, Please fork the repository and create a branch to
+              work on the issue assigned here 💻. When you are done make a Pull Request. Good Luck!
+
+#      - name: Assign Issue
+#        uses: ./action/
+#        with:
+#          USERNAME: ${{ github.event.comment.user.login }}
+#          ISSUE_NUMBER: ${{ github.event.issue.number }}
+#          AUTO_ASSIGN_ISSUE: true
