--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -7,6 +7,9 @@
 name: Auto Comment
 on: [issues, pull_request]
 
+###############
+# Set the Job #
+###############
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -15,8 +18,6 @@ jobs:
         uses: wow-actions/auto-comment@v1.1.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          issuesOpenedReactions: 'hooray, +1'
-          issuesOpenedComment: |
-            👋 @{{ author }}
-            Thank you for raising an issue. We will investigate into the matter and get back to you as soon as possible.
-            Please make sure you have given us as much context as possible.
+          issuesAssignedReactions: 'hooray, +1'
+          issuesAssignedComment: |
+            👋 You've been assigned this issue, Please fork the repository and create a branch to work on the issue assigned here 💻. When you are done make a Pull Request. Good Luck!
