--- a/.github/workflows/auto-issue-assign.yml
+++ b/.github/workflows/auto-issue-assign.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: 0 */1 * * *
   issue_comment:
-    types: [created]
+    types: [created, edited]
   workflow_dispatch:
 
 jobs:
