--- a/.github/workflows/auto-issue-assign.yml
+++ b/.github/workflows/auto-issue-assign.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           github_token: '${{ secrets.GITHUB_TOKEN }}'
           assigned_label: Is-Assigned # you can change this label if you wish
-          required_label: ""
+          required_label: help wanted
