--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -49,6 +49,5 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_EXCLUDE: .*.git/.*, .*.idea/.*, .*metadata/.*, .**.gradle/.*, .*/build/.*,
-            .*.gradle/.*, .*/gradle.properties
+          FILTER_REGEX_EXCLUDE: .*.git/.*|.*.idea/.*|.*metadata/.*|.**.gradle/.*|.*/build/.*|.*.gradle/.*|.*/gradle.properties
           IGNORE_GENERATED_FILES: true
