--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -49,5 +49,14 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_EXCLUDE: .*.git/.*|.*.idea/.*|.*metadata/.*|.**.gradle/.*|.*/build/.*|.*.gradle/.*|.*/gradle.properties
+          FILTER_REGEX_EXCLUDE: .*.git/.*|.*.idea/.*|.*metadata/.*|.**.gradle/.*|.*/build/.*|
+          .*gradle/.*|.*.gradle/.*|.*/gradle.properties|.*/gradle*|.*/gradlew*|.*/gradlew.*|
+          .*/github/.*|.*/result.md|.*/build.gradle|*.*/build.gradle
           IGNORE_GENERATED_FILES: true
+          VALIDATE_NATURAL_LANGUAGE: false
+          VALIDATE_BASH: false
+          VALIDATE_GITHUB_ACTIONS: false
+          VALIDATE_GROOVY: false
+          VALIDATE_MARKDOWN: false
+          VALIDATE_POWERSHELL: false
+          VALIDATE_XML: false
