--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -51,7 +51,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FILTER_REGEX_EXCLUDE: .*.git/.*|.*.idea/.*|.*metadata/.*|.**.gradle/.*|.*/build/.*|
           .*gradle/.*|.*.gradle/.*|.*/gradle.properties|.*/gradle*|.*/gradlew*|.*/gradlew.*|
-          .*/github/.*|.*/result.md|.*/build.gradle|*.*/build.gradle
+          .*/github/.*|.*/result.md|.*/build.gradle|./*/build.gradle
           IGNORE_GENERATED_FILES: true
           VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_BASH: false
