--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -49,9 +49,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_EXCLUDE: .*.git/.*|.*.idea/.*|.*metadata/.*|.**.gradle/.*|.*/build/.*|
-          .*gradle/.*|.*.gradle/.*|.*/gradle.properties|.*/gradle*|.*/gradlew*|.*/gradlew.*|
-          .*/github/.*|.*/result.md|.*/build.gradle|./*/build.gradle
+          FILTER_REGEX_EXCLUDE: .*.git/.*|.*.idea/.*|.*metadata/.*|.**.gradle/.*|.*/build/.*|.*gradle/.*|.*.gradle/.*|.*/gradle.properties|.*/gradle*|.*/gradlew*|.*/gradlew.*|.*/github/.*|.*/result.md|.*/build.gradle|./*/build.gradle
           IGNORE_GENERATED_FILES: true
           VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_BASH: false
