fixed issue with github action.

--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -5,7 +5,7 @@
 #################################
 #################################
 name: Auto Comment
-on: [issues, pull_request]
+on: [issues]
 
 ###############
 # Set the Job #
