--- a/Interview_Prep_App/native_kotlin/base/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_kotlin/base/src/main/AndroidManifest.xml
@@ -11,10 +11,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.nudennie.interviewprepapp.ui.main.MainActivity"
-            android:exported="true"
-            tools:node="merge"
-            android:theme="@style/AppTheme">
+            android:name=".ui.main.SplashScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +20,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nudennie.interviewprepapp.ui.score.ScoreActivity" />
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme"
+            tools:node="merge">
+        </activity>
+        <activity android:name="com.nudennie.interviewprepapp.ui.score.ScoreActivity" />
     </application>
 
 </manifest>
