--- a/Interview_Prep_App/native_kotlin/retrofit/build.gradle
+++ b/Interview_Prep_App/native_kotlin/retrofit/build.gradle
@@ -65,4 +65,9 @@ dependencies {
 
     //Retrofit with Moshi converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    //ROOM database
+    def room_version = "2.4.3"
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
 }
