--- a/Interview_Prep_App/native_java/javatemplate/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_java/javatemplate/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.tc2r.javatemplate">
 
     <application
@@ -10,17 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InterviewPrepApp">
         <activity
-            android:name=".ui.main.MainActivity"
-            android:exported="true">
+            android:name=".ui.main.SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/SplashScreenTheme">
+            <!--Necessary to add this intent filter to the SplashScreen activity for it to become the first activity
+            initialised by the app-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".ui.score.ScoreActivity"
-            android:exported="true"/>
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme"
+            tools:node="merge" />
+        <activity android:name=".ui.score.ScoreActivity" />
     </application>
 
 </manifest>
