--- a/Interview_Prep_App/native_kotlin/retrofit/build.gradle
+++ b/Interview_Prep_App/native_kotlin/retrofit/build.gradle
@@ -65,4 +65,5 @@ dependencies {
 
     //Retrofit with Moshi converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation 'com.google.android.material:material:1.7.0'
 }
