--- a/Interview_Prep_App/settings.gradle
+++ b/Interview_Prep_App/settings.gradle
@@ -30,3 +30,4 @@ include ':native_java:retrofit'
 include ':sharedresources'
 include ':native_kotlin:template'
 include ':native_java:javatemplate'
+include ':native_kotlin:view_binding_'
