--- a/Interview_Prep_App/native_kotlin/view_binding_/build.gradle
+++ b/Interview_Prep_App/native_kotlin/view_binding_/build.gradle
@@ -37,6 +37,11 @@ android {
     packagingOptions {
         exclude 'META-INF/com.android.tools/proguard/coroutines.pro'
     }
+    // to enable view binding in module, set viewBinding to true in buildFeatures{} when it is enabled
+    // a binding class is generated for each XML layout file.
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
