--- a/Interview_Prep_App/native_kotlin/retrofit/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_kotlin/retrofit/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.splash_screen.SplashScreenActivity"
+        android:theme="@style/Theme.AppSplash">
+    <activity
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.splash_screen.SplashScreenActivity"
             android:exported="true">
 
         </activity>
