--- a/Interview_Prep_App/native_java/retrofit/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/AndroidManifest.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
           package="com.dreams.interviewprepapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.dreams.interviewprepapp.ui.main.MainActivity"
-            android:exported="true">
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.InterviewPrepApp">
+        <activity
+            android:name=".ui.main.SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/SplashScreenTheme">
+            <!--Necessary to add this intent filter to the SplashScreen activity for it to become the first activity
+            initialised by the app-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.dreams.interviewprepapp.ui.score.ScoreActivity"/>
+
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme"
+            tools:node="merge" />
+        <activity android:name=".ui.score.ScoreActivity" />
     </application>
 
 </manifest>
