--- a/Interview_Prep_App/native_kotlin/view_binding/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_kotlin/view_binding/src/main/AndroidManifest.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.interviewprep.kotlinretrofit">
+    package="com.interviewprep.kotlinviewbinding">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppSplash">
         <activity
-            android:name=".ui.splash_screen.SplashScreenActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,11 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:exported="true">
-
-        </activity>
         <activity android:name=".ui.score.ScoreActivity" />
     </application>
+
 </manifest>
