--- a/Interview_Prep_App/native_java/retrofit/build.gradle
+++ b/Interview_Prep_App/native_java/retrofit/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'androidx.loader:loader:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.android.material:material:1.4.0'
 }
