--- a/Interview_Prep_App/native_java/retrofit/build.gradle
+++ b/Interview_Prep_App/native_java/retrofit/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.android.material:material:1.4.0'
+    // Lottie dependency
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 }
