--- a/Interview_Prep_App/native_java/retrofit/src/main/AndroidManifest.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-          package="com.dreams.interviewprepapp">
+    package="com.dreams.interviewprepapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,24 +14,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InterviewPrepApp">
         <activity
-            android:name=".ui.main.SplashScreenActivity"
+            android:name=".ui.main.AnimSplashScreenActivity"
             android:exported="true"
             android:theme="@style/SplashScreenTheme">
             <!--Necessary to add this intent filter to the SplashScreen activity for it to become the first activity
             initialised by the app-->
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/AppTheme"
             tools:node="merge" />
         <activity android:name=".ui.score.ScoreActivity" />
+        <activity android:name=".ui.main.SplashScreenActivity"/>
     </application>
 
 </manifest>
