--- a/Interview_Prep_App/native_java/retrofit/build.gradle
+++ b/Interview_Prep_App/native_java/retrofit/build.gradle
@@ -19,6 +19,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.dreams.interviewprepapp'
 }
 
 dependencies {
@@ -28,15 +29,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.loader:loader:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.7.0'
     // Lottie dependency
-    def lottieVersion = "3.4.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation 'com.airbnb.android:lottie:5.2.0'
 
 }
