--- a/Interview_Prep_App/native_kotlin/base/build.gradle
+++ b/Interview_Prep_App/native_kotlin/base/build.gradle
@@ -44,6 +44,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.nudennie.interviewprepapp'
 }
 
 dependencies {
